# Raytracer

src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Tracer.cpp  Tracer.hpp
src/scene/: Background.cpp  Background.hpp  CMakeLists.txt  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp
src/scene/camera/: Camera.cpp  Camera.hpp
src/scene/light/: AmbiantLight.cpp  AmbiantLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.hpp  PointLight.cpp  PointLight.hpp
src/scene/object/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Object.cpp  Object.hpp  Parallelogram.cpp  Parallelogram.hpp  Plan.cpp  Plan.hpp  Sphere.cpp  Sphere.hpp
src/scene/texture/: TextureMapper.cpp  TextureMapper.hpp
src/texture/: CMakeLists.txt  Checker.cpp  Checker.hpp  TextureMapper.cpp  TextureMapper.hpp
src/tools/: CMakeLists.txt  Color.hpp  Ray.cpp  Ray.hpp  Solver.cpp  Solver.hpp  Transformer.cpp  Transformer.hpp
